--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "kekstagram personal project",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "colors": "1.3.2"
+  },
   "devDependencies": {
     "eslint": "5.6.1",
     "eslint-config-htmlacademy": "0.5.2"
