--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "devDependencies": {
     "eslint": "5.6.1",
-    "eslint-config-htmlacademy": "0.5.2"
+    "eslint-config-htmlacademy": "0.5.2",
+    "mocha": "5.2.0"
   },
   "scripts": {
     "test:lint": "eslint .",
-    "test": "npm run test:lint"
+    "test:mocha": "mocha",
+    "test": "npm run test:lint && npm run test:mocha"
   },
   "repository": {
     "type": "git",
