--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "kekstagram personal project",
   "main": "index.js",
   "dependencies": {
-    "colors": "1.3.2"
+    "colors": "1.3.2",
+    "express": "4.16.4",
+    "mkdirp": "0.5.1",
+    "multer": "1.4.1"
   },
   "devDependencies": {
     "eslint": "5.6.1",
     "eslint-config-htmlacademy": "0.5.2",
-    "mocha": "5.2.0"
+    "mocha": "5.2.0",
+    "supertest": "3.3.0"
   },
   "scripts": {
     "test:lint": "eslint .",
