--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "kekstagram personal project",
   "main": "index.js",
   "dependencies": {
+    "buffer-to-stream": "1.0.0",
     "colors": "1.3.2",
     "express": "4.16.4",
     "mkdirp": "0.5.1",
+    "mongodb": "3.1.8",
     "multer": "1.4.1"
   },
   "devDependencies": {
